# claps

./: .envrc  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yaml  cspell.config.yaml  cspell.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  load-balancer.yaml  release.yaml
docs/: ddns.md  gfw.md
docs/alist-cli/: README.md
docs/bws/: README.md  bws.1
docs/cf/: ddns.service
docs/ddns/: README.md  ddns.1  ddns.service
docs/gfw/: README.md  route.md
docs/pm/: README.md
python/: Taskfile.yaml
python/gsc/: __main__.py  fetch.py  main.py
python/gsc/auto/: dns.py
python/gsc/conf/: __init__.py  utils.py
python/gsc/conf/dns/: __init__.py  rule.py  server.py
python/gsc/conf/experimental/: __init__.py  cache_file.py  clash_api.py
python/gsc/conf/inbound/: __init__.py  mixed.py
python/gsc/conf/log/: __init__.py
python/gsc/conf/outbound/: __init__.py  block.py  direct.py  dns.py  selector.py  urltest.py
python/gsc/conf/route/: __init__.py  rule.py
python/gsc/conf/rule_set/: __init__.py
python/gsc/conf/shared/: listen.py
python/gsc/group/: __init__.py  country.py  geo.py  ipv.py  singbox.py  smart.py
scripts/: ip.py
src/: lib.rs
src/api/: mod.rs
src/api/alist/: mod.rs
src/api/alist/auth/: login.rs
src/api/alist/fs/: list.rs  mod.rs  put.rs  remove.rs
src/api/clash/: group.rs  mod.rs  proxies.rs
src/api/clash/proxies/: mod.rs
src/api/cloudflare/: auth.rs  create.rs  delete.rs  list.rs  mod.rs  update.rs
src/api/cloudflare/accounts/: mod.rs
src/api/cloudflare/accounts/cfd_tunnel/: get.rs  mod.rs
src/api/cloudflare/accounts/cfd_tunnel/configurations/: get.rs  mod.rs  put.rs
src/api/cloudflare/dns/: create.rs  delete.rs  list.rs  mod.rs
src/api/cloudflare/zones/: mod.rs
src/api/cloudflare/zones/dns_records/: delete.rs  get.rs  mod.rs  post.rs
src/api/ipsb/: mod.rs
src/cmd/: mod.rs
src/cmd/bw/: get.rs  list.rs  mod.rs  types.rs
src/cmd/py/: mod.rs
src/common/: cmd.rs  err.rs  log.rs  mod.rs
src/common/cmd/: complete.rs  mod.rs
src/internal/: mod.rs
src/internal/singbox/conf/: log.rs  mod.rs
src/internal/singbox/conf/dns/: mod.rs  rule.rs  server.rs
src/internal/singbox/conf/inbound/: mixed.rs  mod.rs
src/internal/singbox/conf/outbound/: block.rs  direct.rs  dns.rs  mod.rs  selector.rs  urltest.rs
src/internal/singbox/conf/route/: mod.rs  rule.rs
src/internal/singbox/conf/shared/: listen.rs
src/internal/sub/: info.rs  mod.rs
