[dependencies]
anyhow = "1.0.79"
async-recursion = "1.0.5"
clap = { features = ["derive"], version = "4.4.18" }
clap-verbosity-flag = "2.1.2"
clap_complete = "4.4.9"
clap_mangen = "0.2.18"
crossterm = "0.27.0"
directories = "5.0.1"
futures = "0.3.30"
reqwest = { features = ["json"], version = "0.11.24" }
serde = { features = ["derive"], version = "1.0.196" }
serde_json = "1.0.113"
tabled = { features = ["ansi"], version = "0.15.0" }
tokio = { features = ["full"], version = "1.35.1" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
whoami = "1.4.1"

[package]
authors = ["liblaf <i@liblaf.me>"]
description = "CLIs written in Rust"
edition = "2021"
license = "MIT"
name = "claps"
readme = "README.md"
repository = "https://github.com/liblaf/claps"
version = "0.1.0"
