[dependencies]
anyhow = "1.0.81"
async-recursion = "1.1.0"
chrono = "0.4.37"
clap = { features = ["derive"], version = "4.5.4" }
clap-verbosity-flag = "2.2.0"
clap_complete = "4.5.1"
clap_mangen = "0.2.20"
colored = "2.1.0"
crossterm = "0.27.0"
directories = "5.0.1"
futures = "0.3.30"
indicatif = "0.17.8"
mime_guess = "2.0.4"
once_cell = "1.19.0"
phf = { features = ["macros"], version = "0.11.2" }
reqwest = { features = ["json", "stream"], version = "0.12.3" }
serde = { features = ["derive"], version = "1.0.197" }
serde_json = "1.0.115"
serde_with = "3.7.0"
shadow-rs = "0.27.1"
tabled = { features = ["ansi"], version = "0.15.0" }
tokio = { features = ["full"], version = "1.37.0" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
whoami = "1.5.1"

[package]
authors = ["liblaf <i@liblaf.me>"]
description = "CLIs written in Rust"
edition = "2021"
license = "MIT"
name = "claps"
readme = "README.md"
repository = "https://github.com/liblaf/claps"
version = "0.1.0"
