[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["liblaf <i@liblaf.me>"]
description = "CLIs written in Rust"
license = "MIT"
name = "claps"
packages = [{ from = "python", include = "gsc" }]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
httpx = { extras = ["socks"], version = "^0.26.0" }
loguru = "^0.7.2"
opencc = "^1.1.7"
pydantic = "^2.6.0"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[tool.poetry.scripts]
gfw-sub-conf = "gsc.__main__:main"
gsc = "gsc.__main__:main"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
